# youtrack-worktime-reporter

./: pyproject.toml
tests/: test_youtrack_worktime_reporter.py
youtrack_worktime_reporter/: __main__.py  google.py
