[tool.poetry]
name = "youtrack-worktime-reporter"
version = "0.1.0"
description = ""
authors = ["Vladislav Bortnikov <bortnikov.vladislav@e-sakha.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
youtrack = "^0.1"
python-dotenv = "^0.14.0"
influxdb = "^5.3.0"
google-api-python-client = "^1.11.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
python-dateutil = "^2.8.1"
pandas = "^1.1.3"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
